# plc-datalink-rfc1006

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  dc-plc-datalink-rfc1006-acr.yml  dc-plc-datalink-rfc1006-dev.yml  dc-plc-datalink-rfc1006-e2e.yml  dc-plc-datalink-rfc1006-local.yml  dc-plc-datalink-rfc1006-test.yml  dc-registry-local.yml
.claude/: settings.json
backend/: .dockerignore  Dockerfile  Dockerfile.test  Dockerfile.test.dockerignore  README.md  dockerfile-plc-datalink-rfc1006-backend  pyproject.toml  requirements.txt
backend/config/: backend-entrypoint.sh  dynamic_startup_telegraf.sh  env  env.example  supervisord.conf
backend/config/example-machines/: plc-datalink-rfc1006.conf  plc-datalink-rfc1006_config.yml
backend/openapi/: plc_datalink_rfc1006_api.yml
backend/src/: init.py  plc_datalink_rfc1006_model.py  routes.py
backend/src/services/: couchdb_service.py  machine_configuration_service.py  telegraf_service.py
backend/test/: config_create.sh  config_read_all.sh  config_read_one.sh
backend/test/curl/: config_update.sh  machine_start.sh
backend/test/scripts/: conftest.py  plc_datalink_rfc1006_linux.py
backend/test/scripts/integration/: conftest.py  mosquitto.conf  test_couchdb_zks_roundtrip.py  test_e2e_zks_mqtt.py  test_zks_s7_smoke.py  test_zks_telegraf_render.py  zks_fixtures.py
backend/test/scripts/unit/: test_couchdb_service.py  test_machine_configuration_service.py  test_model.py  test_routes.py  test_telegraf_service.py
backend/test/scripts/unit/snapshots/: sample_machine.conf
(+151 files in other folders)
